--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 
-<div class="left-container">
+<div class="grid-container">
+
+<div class="left-container sub-container">
 <img class="sedans" src="images/icon-sedans.svg" alt="">
 
 <h1>SEDANS</h1>
@@ -24,7 +26,7 @@ or on your next road trip.</p>
 
 </div>
 
-<div class="middle-container">
+<div class="middle-container sub-container">
 <img class="suvs" src="images/icon-suvs.svg" alt="">
 
 <h1>SUVs</h1>
@@ -33,7 +35,7 @@ and off-road adventures.</p>
 <button class="middle-button" type="button" name="button2">Learn More</button>
 </div>
 
-<div class="right-container">
+<div class="right-container sub-container">
 <img class="luxury" src="images/icon-luxury.svg" alt="">
 
 <h1>LUXURY</h1>
@@ -42,11 +44,13 @@ rental and arrive in style.</p>
 <button class="right-button" type="button" name="button3">Learn More</button>
 </div>
 
+</div>
 
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Rakesh</a>.
   </div>
 </body>
 </html>
+
